@@ -1,8 +1,12 @@
 cdebconf-entropy (0.6) UNRELEASED; urgency=low
 
   * Switch the handler symbol to the "cdebconf_" namespace.
+  * Use the proper namespace to access newt frontend API.
+  * Remove the usage of dlsym() and dlopen() now that frontend symbols are
+    loaded globally.
+  * Bump Depends on cdebconf accordingly.
 
- -- Jérémy Bobbio <lunar@debian.org>  Fri, 03 Aug 2007 02:12:31 +0200
+ -- Jérémy Bobbio <lunar@debian.org>  Tue, 07 Aug 2007 13:35:56 +0200
 
 cdebconf-entropy (0.5) unstable; urgency=medium
 
